[tool.poetry]
name = "test task low-code dev"
version = "0.1.0"
description = ""
authors = ["duxevy <79513394+duxevy@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
requests = "^2.32.3"
getpass-asterisk = "^1.0.1"
pip-system-certs = "^4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
